<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRestaurantActivity">
    <include
        android:id="@+id/base"
        layout="@layout/activity_base"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/add_restaurant_form"
        android:layout_width="0dp"
        android:layout_height="424dp"
        android:layout_marginBottom="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base">

        <LinearLayout
            android:id="@+id/add_restaurant_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/restaurant_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:hint="@string/prompt_restaurant_name"
                    android:inputType="text|number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:id="@+id/restaurant_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/restaurant_category"
                android:entries="@array/restaurant_category" />

            <Spinner
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/restaurant_location"
                android:entries="@array/restaurant_location" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/postcode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:hint="@string/prompt_Postcode"
                    android:inputType="textPostalAddress"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TimePicker
                android:id="@+id/opening_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/closing_time"
                android:layoutMode="opticalBounds"
                android:textAlignment="textStart">

            </TimePicker>

            <TimePicker
                android:id="@+id/closing_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutMode="opticalBounds">

            </TimePicker>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/number_of_tables"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:hint="@string/prompt_no_of_tables"
                    android:inputType="text|number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/add_restaurant"
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/action_add_restaurant"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>